[tool.poetry]
name = "auth-system"
version = "0.1.0"
description = "paip auth 계정관리시스템"
authors = ["pai-cm <cmkim@publicai.co.kr>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "webapp" }
]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
aiosqlite = "^0.20.0"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
pycryptodome = "^3.20.0"
cryptography = "^42.0.8"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
coverage = "^7.5.4"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
